# aos-search

./: .gitignore
backend/: Cargo.toml  diesel.toml  schema.sql
backend/migrations/2025-01-19-104252_create_schema/: down.sql  up.sql
backend/src/: api.rs  db.rs  file_parser.rs  lib.rs  main.rs  models.rs  schema.rs
db_setup/: README.md  dbmaker.py  dbsetup.py  dbwriter.py  schema.sql
frontend/: package.json  tsconfig.app.json
frontend/src/: App.tsx  font-ascii.d.ts  main.tsx
frontend/src/assets/styles/: randomquote.css
frontend/src/pages/: RandomQuoteGenerator.tsx
