[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
serde = { version ="1.0.217", features = ["derive"]}
serde_json = "1.0.137"
sqlx = {version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"]}
sqlx-cli = { version = "0.8.3", features = ["sqlite"] }
tokio = {version = "1.43.0", features = ["macros", "full", "rt-multi-thread"]}
