[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
anyhow = "1.0.95"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde = { version ="1.0.217", features = ["derive"]}
serde_json = "1.0.137"
sqlx = {version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"]}
sqlx-cli = { version = "0.8.3", features = ["sqlite"] }
sqlx-macros = "0.8.3"
tokio = {version = "1.43.0", features = ["macros", "full", "rt-multi-thread"]}

[lib]
name = "backend"
path = "src/lib.rs"